2005-03-15  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Return proper
	error message when authentication fails. This happens when we start
	evolution in calendar view without remembering the password.

2005-03-15  Sushma Rai  <rsushma@novell.com>

	* shell/e-folder-misc-dialogs.c (do_foreign_folder_dialog): Fixed the
	way e-mail ids were being read from the user name entry.

2005-03-14  Sivaiah Nallagatla <snallagatla@novell.com>

       * addresbook/e-book-backend-excahnge.c
       (e_book_backend_exchange_create_contact)
       (e_book_backend_exchange_modify_contact)
       (e_book_backend_exchange_remove_contacts)
       (e_book_backend_exchange_get_changes)
       (e_book_backend_exchange_get_contact) : added misc. stuff
       like returning proper error code, assigning
       NULL to out params and not using e_data_book_view etc
       to offline case error handling
       Don't know if it fixes any bug in bugzilla


2005-03-11  Sarfraaz Ahmed <asarfraaz@novell.com>

        * calendar/e-cal-backend-exchange-calendar.c (add_ical) : Make sure we
        check for attachments in subcomponents of a vcalendar as well.
        (get_attachment) : Moved to e-cal-backend-exchange.c
        (build_msg) : Moved to e-cal-backend-exchange.c
        (create_object) : Minor leak fixed.
        (modify_object_with_href) : Dont loose the attachments while modifying.
        * calendar/e-cal-backend-exchange-tasks.c (put_body): Handle attachments
        (get_changed_tasks) : Check for attachments and fetch them from server.
        (create_task_object) : Check for attachments and send them to server.
        (modify_task_object) : Similar
        * calendar/e-cal-backend-exchange.c (load_cache) : Create the local
        attachment store for the GUI to store exchange attachments
        (save_attach_file) : Make a local copy of the attachment in the backend