@@ -1,3 +1,15 @@
+2005-03-15  Sushma Rai  <rsushma@novell.com>
+
+	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Using
+	ExchangeParams structure to store the parameters values to read from
+	server during user validation, and adding them to camel url.
+
+	* lib/e2k-autoconfig.c (e2k_validate_user): Using ExchangeParams.
+	(validate): If the user is validated finding "mailbox" and "owa_path"
+	values. Using ExchangeParams for returning the values.
+
+	* lib/e2k-validate.h: Defined ExchangeParams.
+
 2005-03-15  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* calendar/e-cal-backend-exchange.c (open_calendar): Return proper
